Fix text that overflows
Remove the limit of text input

--- a/style.css
+++ b/style.css
@@ -138,14 +138,17 @@ main {
   height: 330px;
   overflow-wrap: break-word;
   user-select: text;
+  overflow-y: auto;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .noteText {
+  width: 100%;
+  height: 100%;
   font-family: "Patua One", cursive;
-  font-size: 1.5em;
+  font-size: 1.4em;
   white-space: pre-line;
   white-space: pre-wrap;
   text-align: center;
